[project]
name = "functions-framework-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "functions-framework>=3.9.2",
    'python = <3.13,>=3.10",
    'pathlib = ^1.0.1",
    'requests = >=2.30.0,<2.32.0",
    'click = ^8.1.7",
    'icecream = ^2.1.3",
    'openpyxl = ^3.1.5",
    'arcgis = ^2.4.0",
    'numpy = >=1.21.6,<2",
    'geopandas = ^1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "toml-to-requirements>=0.3.0",
]
